# cim-domain-conceptualspaces

./: Cargo.toml  README.md  flake.nix
doc/: api.md  user-stories.md
examples/: loan_concept_example.rs
src/: category_formation.rs  concept_map.rs  dimensions.rs  lib.rs  morphisms.rs  projection.rs  reasoning.rs  similarity.rs  space.rs  spatial_index.rs  systems.rs  traits.rs
src/aggregate/: conceptual_space.rs  mod.rs
src/calculations/: mod.rs  voronoi.rs
src/category_theory/: functor.rs  mod.rs  operad.rs  profunctor.rs
src/commands/: add_concept.rs  add_region.rs  create_space.rs  mod.rs  update_weights.rs
src/events/: concept_added.rs  mod.rs  region_added.rs  space_created.rs  weights_updated.rs
src/handlers/: conceptual_space_command_handler.rs  mod.rs
src/projections/: mod.rs
src/queries/: find_similar.rs  mod.rs
src/value_objects/: concept.rs  convex_region.rs  dimension_weight.rs  mod.rs  quality_dimension.rs
tests/: conceptual_space_tests.rs  conceptualspaces_user_story_tests.rs
