[package]
name = "cim-domain-conceptualspaces"
version = "0.3.0"
edition = "2021"
description = "Conceptual Spaces domain for CIM - Geometric knowledge representation"
keywords = [
    "conceptual-spaces",
    "knowledge-representation",
    "semantic",
    "ddd",
    "domain",
]
categories = ["science", "data-structures"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
cid = { version = "0.11", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"

# Math and geometry
nalgebra = { version = "0.33", features = [
    "serde-serialize",
] } # Enable serde support
petgraph = { version = "0.6", features = ["serde-1"] } # Enable serde support

# Logging
tracing = "0.1"

# ECS
bevy = { version = "0.16.1", default-features = false }

# Internal dependencies
cim-component = { path = "../cim-component" }
cim-domain = { path = "../cim-domain" }
cim-ipld = { path = "../cim-ipld" }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }

[lints]
workspace = true
